--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -13,24 +13,17 @@
 
                 <div class="nb_filter_head price-range-div" id="filter1">
                     <h5 class="mb-0">
-                        <button class="btn btn-link"
-                                data-toggle="collapse"
-                                data-target="#collapseOne"
-                                aria-expanded="true"
-                                aria-controls="collapseOne">
+                        <button id="price_btn" class="btn btn-link">
                             Price
                         </button>
                     </h5>
                 </div>
-                <div class="nb_filter_body">
+                <div class="nb_filter_body price-content">
                     <div class="filtered-amout">
                         <div id="amount"></div>
                     </div>
 
-                    <div id="collapseOne"
-                         class="collapse show price-range-div"
-                         aria-labelledby="filter1"
-                         data-parent="#accordion">
+                    <div class="price-range-div">
                         <div class="nb_filter_body pb-0">
                             <ul class="nb_prd_filter_listouter">
 
@@ -51,19 +44,12 @@
                 {
                     <div class="nb_filter_head" id="filter2">
                         <h5 class="mb-0">
-                            <button class="btn btn-link collapsed"
-                                    data-toggle="collapse"
-                                    data-target="#collapse2"
-                                    aria-expanded="true"
-                                    aria-controls="collapse2">
+                            <button id="brand_btn" class="btn btn-link">
                                 Brand
                             </button>
                         </h5>
                     </div>
-                    <div id="collapse2"
-                         class="collapse show"
-                         aria-labelledby="filter2"
-                         data-parent="#accordion">
+                    <div class="brand-content">
                         <div class="nb_filter_body">
                             <ul class="nb_prd_filter_listouter">
                                 @foreach (var item in Model.Manufacturer)
@@ -80,19 +66,12 @@
                 {
                     <div class="nb_filter_head" id="filter3">
                         <h5 class="mb-0">
-                            <button class="btn btn-link collapsed"
-                                    data-toggle="collapse"
-                                    data-target="#collapse3"
-                                    aria-expanded="true"
-                                    aria-controls="collapse3">
+                            <button id="type_btn" class="btn btn-link">
                                 By Type
                             </button>
                         </h5>
                     </div>
-                    <div id="collapse3"
-                         class="collapse show"
-                         aria-labelledby="filter3"
-                         data-parent="#accordion">
+                    <div class="type-content">
                         <div class="nb_filter_body">
                             <ul class="nb_prd_filter_listouter">
                                 @foreach (var item in Model.subCategories)
@@ -112,19 +91,12 @@
 
                     <div class="nb_filter_head" id="filter_@(item.Key.AttributeId+item.Value.Count)">
                         <h5 class="mb-0">
-                            <button class="btn btn-link collapsed"
-                                    data-toggle="collapse"
-                                    data-target="#collapse_@(item.Key.AttributeId+item.Value.Count)"
-                                    aria-expanded="true"
-                                    aria-controls="collapse_@(item.Key.AttributeId+item.Value.Count)">
+                            <button id="@(item.Key.AttributeId+item.Value.Count)" onclick="showAttribute(event)" class="btn btn-link">
                                 @item.Value.FirstOrDefault().ProductAttributes.AttributeName
                             </button>
                         </h5>
                     </div>
-                    <div id="collapse_@(item.Key.AttributeId+item.Value.Count)"
-                         class="collapse show"
-                         aria-labelledby="filter_@(item.Key.AttributeId+item.Value.Count)"
-                         data-parent="#accordion">
+                    <div class="content_@(item.Key.AttributeId+item.Value.Count)">
                         <div class="nb_filter_body">
                             <ul class="nb_prd_filter_listouter">
                                 @foreach (var items in item.Value)
@@ -228,4 +200,21 @@
         });
 
     });
+
+//filter Show/Hide
+    $(document).ready(function () {
+        $('#price_btn').click(function () {
+            $('.price-content').slideToggle("fast");;
+        });
+        $('#brand_btn').click(function () {
+            $('.brand-content').slideToggle("fast");;
+        });
+        $('#type_btn').click(function () {
+            $('.type-content').slideToggle("fast");;
+        }); 
+    });
+    function showAttribute(event) {
+        var id = event.target.id
+            $('.content_'+id).slideToggle("fast");
+    };
 </script>
