--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -6,7 +6,7 @@
     <div class="nb_prd_filterwrap">
         <div class="prod_count_sec">
             <h5 class="count">@(Model.Count+"Products")</h5>
-          
+
         </div>
         <div class="nb_fltr_accrd_wrap">
             <div id="accordion" class="nb_filter_accordion">
@@ -122,9 +122,16 @@
             $(".price-range-div").hide();
             return;
         }
-        var priceIndex = window.location.href.indexOf("priceS-");
-        var prices = priceIndex > -1 ? window.location.href.substr((priceIndex + 7), 14) : null;
+        var prices;
+        var parameterValue = getUrlParameter("values");
+        var parameterValueList = parameterValue.split("/");
+        jQuery.each(parameterValueList, function(index, item) {
+            if (item.indexOf('priceS-') > -1) {
+                prices = item.replace('priceS-', '');
+            }
+        });
         if (prices != null) {
+            debugger;
             prices = prices.split("_");
             min = Math.floor(parseFloat(prices[0]));
             max = Math.ceil(parseFloat(prices[1]));
@@ -171,6 +178,7 @@
                 $(":checkbox").each(function () {
 
                     if (this.checked) {
+                        debugger;
                         if (str.indexOf($(this).val()) < 0) {
                             arr.push($(this).val());
                             data = this.id;
@@ -213,8 +221,18 @@
             $('.type-content').slideToggle("fast");;
         }); 
     });
-    function showAttribute(event) {
-        var id = event.target.id
-            $('.content_'+id).slideToggle("fast");
+    var getUrlParameter = function getUrlParameter(sParam) {
+        var sPageURL = window.location.search.substring(1),
+            sURLVariables = sPageURL.split('&'),
+            sParameterName,
+            i;
+
+        for (i = 0; i < sURLVariables.length; i++) {
+            sParameterName = sURLVariables[i].split('=');
+
+            if (sParameterName[0] === sParam) {
+                return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+            }
+        }
     };
 </script>
