resolve minor issue of this  '>' sign from layout page Imported from Changeset 2930

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
     <script src="~/Content/Theme/University/app/js/jquery.elevatezoom.js"></script>
     <script src="~/Content/Theme/University/app/js/jquery-confirm.min.js"></script>
     <script src="~/Content/Theme/University/app/js/Uni_KitProductDetail_Custom.js"></script>
-    <script src="~/Scripts/jquery.ui.touch-punch.min.js"></script>>
+    <script src="~/Scripts/jquery.ui.touch-punch.min.js"></script>
 
 </body>
 </html>
