Removed wishlist from my account page Imported from Changeset 2934

--- a/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
@@ -32,7 +32,7 @@
                             <a class="leftsideNav" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">
                                 <i class="ico icon-file-text"></i>Order History
                             </a>
-                            <a class="leftsideNav" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">
+                            <a class="leftsideNav" href="@Url.Action("WishList","Products")">
                                 <i class="ico icon-love"></i>Wishlist
                             </a>
 
