--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -83,11 +83,11 @@
     {
         if (!Ganedata.Core.Services.Inventory.IsProductInNotifyList(Model.SelectedProduct, ViewBag.CurrentUserId))
         {
-            <button class="btmbtn sho" onclick="addToNotifyListByConfirmation(@Model.SelectedProduct.ProductId, @Model.BaseProductId)" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="font-size: 28px;"></i></button>
+            <button class="btmbtn sho" onclick="addToNotifyList(@Model.SelectedProduct.ProductId, @Model.BaseProductId)" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="font-size: 28px;"></i></button>
         }
         else
         {
-            <button class="btmbtn sho" onclick="removeNotifyListItemByConfirmation(@Model.SelectedProduct.ProductId, @Model.BaseProductId)" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red; font-size: 28px;"></i></button>
+            <button class="btmbtn sho" onclick="redirectToWishListByConfirmation()" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red; font-size: 28px;"></i></button>
         }
     }
 
@@ -97,6 +97,6 @@
     }
     else
     {
-        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="removeWishListItemByConfirmation(@Model.SelectedProduct.ProductId, @Model.BaseProductId)"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></button>
+        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="redirectToWishListByConfirmation()"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></button>
     }
 </div>
